# serializer version: 1
# name: test_nulls[session-tracked-ASC_NULLS_FIRST-async-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_FIRST-async-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_FIRST-sync-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_LAST-async-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_LAST-async-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_LAST-sync-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_FIRST-async-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_FIRST-async-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_FIRST-sync-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_LAST-async-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_LAST-async-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_LAST-sync-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   ORDER BY "user".bio DESC NULLS LAST
  '''
# ---
# name: test_order_by[session-tracked-ASC-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_order_by[session-tracked-ASC-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_order_by[session-tracked-ASC-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_order_by[session-tracked-DESC-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name DESC
  '''
# ---
# name: test_order_by[session-tracked-DESC-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name DESC
  '''
# ---
# name: test_order_by[session-tracked-DESC-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-avg-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."avg_fruits__avg_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-avg-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."avg_fruits__avg_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-avg-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."avg_fruits__avg_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-max-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."max_fruits__max_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-max-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."max_fruits__max_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-max-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."max_fruits__max_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-min-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."min_fruits__min_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-min-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."min_fruits__min_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-min-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."min_fruits__min_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddev-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_fruits__stddev_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddev-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_fruits__stddev_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddev-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_fruits__stddev_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevPop-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_pop_fruits__stddev_pop_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevPop-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_pop_fruits__stddev_pop_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevPop-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_pop_fruits__stddev_pop_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevSamp-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_samp_fruits__stddev_samp_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevSamp-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_samp_fruits__stddev_samp_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevSamp-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_samp_fruits__stddev_samp_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-sum-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."sum_fruits__sum_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-sum-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."sum_fruits__sum_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-sum-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."sum_fruits__sum_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varPop-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_pop_fruits__var_pop_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varPop-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_pop_fruits__var_pop_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varPop-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_pop_fruits__var_pop_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varSamp-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_samp_fruits__var_samp_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varSamp-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_samp_fruits__var_samp_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varSamp-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_samp_fruits__var_samp_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-variance-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."variance_fruits__variance_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-variance-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."variance_fruits__variance_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-variance-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."variance_fruits__variance_water_percent" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-avg-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."avg_fruits__avg_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-avg-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."avg_fruits__avg_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-avg-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."avg_fruits__avg_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-max-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."max_fruits__max_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-max-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."max_fruits__max_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-max-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_fruits__max_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."max_fruits__max_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-min-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."min_fruits__min_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-min-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."min_fruits__min_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-min-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_fruits__min_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."min_fruits__min_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddev-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_fruits__stddev_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddev-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_fruits__stddev_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddev-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev(fruit_1.water_percent) AS stddev_fruits__stddev_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_fruits__stddev_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevPop-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_pop_fruits__stddev_pop_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevPop-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_pop_fruits__stddev_pop_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevPop-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_pop(fruit_1.water_percent) AS stddev_pop_fruits__stddev_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_pop_fruits__stddev_pop_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevSamp-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_samp_fruits__stddev_samp_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevSamp-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_samp_fruits__stddev_samp_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevSamp-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT stddev_samp(fruit_1.water_percent) AS stddev_samp_fruits__stddev_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."stddev_samp_fruits__stddev_samp_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-sum-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."sum_fruits__sum_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-sum-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."sum_fruits__sum_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-sum-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."sum_fruits__sum_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varPop-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_pop_fruits__var_pop_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varPop-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_pop_fruits__var_pop_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varPop-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_pop(fruit_1.water_percent) AS var_pop_fruits__var_pop_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_pop_fruits__var_pop_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varSamp-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_samp_fruits__var_samp_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varSamp-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_samp_fruits__var_samp_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varSamp-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT var_samp(fruit_1.water_percent) AS var_samp_fruits__var_samp_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."var_samp_fruits__var_samp_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-variance-async-asyncpg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."variance_fruits__variance_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-variance-async-psycopg_async_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."variance_fruits__variance_water_percent" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-variance-sync-psycopg_engine]
  '''
  SELECT color__fruits.water_percent,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT variance(fruit_1.water_percent) AS variance_fruits__variance_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   ORDER BY aggregation_0."variance_fruits__variance_water_percent" DESC
  '''
# ---
# name: test_relation_order_by[session-tracked-ASC-async-asyncpg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC
         ) AS color__fruits
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-ASC-async-psycopg_async_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC
         ) AS color__fruits
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-ASC-sync-psycopg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness ASC
         ) AS color__fruits
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-DESC-async-asyncpg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness DESC
         ) AS color__fruits
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-DESC-async-psycopg_async_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness DESC
         ) AS color__fruits
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-DESC-sync-psycopg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN LATERAL (
          SELECT fruit_1.sweetness AS sweetness,
                 fruit_1.id AS id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
           ORDER BY fruit_1.sweetness DESC
         ) AS color__fruits
      ON TRUE
  '''
# ---
